--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Substituição automática de linhas em arquivos por termo de busca",
   "main": "index.js",
   "scripts": {
+    "publish": "npm publish",
+    "patch": "npm version patch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
