--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "text-replacer",
+  "name": "text-line-replacer",
   "version": "1.0.0",
   "description": "Substituição automática de linhas em arquivos por termo de busca",
   "main": "index.js",
